--- a/GridWithUnsplashAPI/PictureCollectionViewCell.xib
+++ b/GridWithUnsplashAPI/PictureCollectionViewCell.xib
@@ -10,14 +10,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PictureCollectionViewCell" id="gTV-IL-0wX" customClass="PictureCollectionViewCell" customModule="GridWithUnsplashAPI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AZv-fD-ezz">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AZv-fD-ezz">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                     </imageView>
                 </subviews>
             </view>
@@ -28,11 +28,11 @@
                 <constraint firstItem="AZv-fD-ezz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="qEG-8J-Tv5"/>
                 <constraint firstItem="AZv-fD-ezz" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="xIj-Fl-nRZ"/>
             </constraints>
-            <size key="customSize" width="150" height="150"/>
+            <size key="customSize" width="300" height="300"/>
             <connections>
                 <outlet property="imageView" destination="AZv-fD-ezz" id="dsz-k9-R7H"/>
             </connections>
-            <point key="canvasLocation" x="-73.913043478260875" y="75"/>
+            <point key="canvasLocation" x="34.782608695652179" y="24.776785714285712"/>
         </collectionViewCell>
     </objects>
 </document>
